[package]
name = "osgb_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
# 二进制文件解析
byteorder = "1.4"  # 处理字节序
nom = "7.1"        # 解析二进制数据

# 3D 数据处理
gltf = { version = "1.0", features = ["import"] }  # 后续转 glTF 用

# 日志输出
log = "0.4"
env_logger = "0.9"
libc = "0.2"
clap = "2.0"
chrono = "0.4"
rayon = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"

[build-dependencies]
cc = "1.0.*"